[package]
name = "evc"
version = "0.1.2"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2018"
description = "Eventually consistent synchronization primitive"
readme = "README.md"
documentation = "https://docs.rs/evc"
repository = "https://github.com/4lDO2/evc"
license = "MIT/Apache-2.0"

keywords = ["lock-free"]
categories = ["concurrency"]

[badges]
travis-ci = { repository = "4lDO2/evc" }
maintenance = { status = "passively-maintained" }
